# Ros2Scope

./: .gitignore  AUTHORS  CMakeLists.txt  NOTICE  README.md
core/app/include/ros2scope/app/: application.hpp
core/app/src/: application.cpp
core/event_bus/include/ros2scope/event_bus/: event_bus.hpp
core/layout/include/ros2scope/layout/: layout_manager.hpp
core/layout/src/: layout_manager.cpp
core/plugin_api/include/ros2scope/plugin_api/: core_context.hpp  iplugin.hpp
core/plugin_loader/include/ros2scope/plugin_loader/: plugin_loader.hpp
core/plugin_loader/src/: plugin_loader.cpp
core/ros_bridge/include/ros2scope/ros_bridge/: ros_bridge.hpp
core/ros_bridge/src/: ros_bridge.cpp
core/type_introspection/include/ros2scope/type_introspection/: type_resolver.hpp
core/type_introspection/src/: type_resolver.cpp
core/workspace_env/include/ros2scope/workspace_env/: workspace_environment.hpp
core/workspace_env/src/: workspace_environment.cpp
plugins/graph/src/: graph_plugin.cpp
plugins/image_viewer/src/: image_viewer_plugin.cpp
plugins/param_editor/src/: param_editor_plugin.cpp
plugins/plot/src/: plot_plugin.cpp
plugins/topic_echo/src/: topic_echo_plugin.cpp
src/: main.cpp
